hphp/test/zend/bad/ext/phar/tests/rmdir.php
<?php
$fname = dirname(__FILE__) . '/' . basename(__FILE__, '.php') . '.phar.php';
$pname = 'phar://' . $fname;
$file = b"<?php
Phar::mapPhar('hio');
__HALT_COMPILER(); ?>";

$files = array();
$files['a/x'] = 'a';
include 'files/phar_test.inc';
include $fname;

echo file_get_contents($pname . '/a/x') . "\n";
var_dump(rmdir($pname . '/a'));
echo file_get_contents($pname . '/a/x') . "\n";
unlink($pname . '/a/x');
var_dump(rmdir($pname . '/a'));
?>
<?php unlink(dirname(__FILE__) . '/' . basename(__FILE__, '.php') . '.phar.php'); ?>